# qgroundcontrol

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  QGCCommon.pri  qgroundcontrol.pro  qgroundcontrol.qrc
localization/: qgc.ts
src/: QGCApplication.cc  QGCToolbox.cc  QGCToolbox.h
src/Camera/: QGCCameraControl.cc
src/FirmwarePlugin/PX4/: PX4FirmwarePlugin.cc  PX4ParameterFactMetaData.xml
src/FlightDisplay/: FlightDisplayView.qml
src/MissionManager/: PlanManager.cc
src/QmlControls/: ScreenToolsController.h
src/Vehicle/: Vehicle.cc  Vehicle.h
src/VideoStreaming/: VideoStreaming.cc
src/comm/: LinkConfiguration.cc  LinkConfiguration.h  LinkManager.cc  MQTTLink.cc  MQTTLink.h  QGCFlightGearLink.cc
src/ui/: MainWindow.cc
src/ui/preferences/: GeneralSettings.qml
